切版 header, footer, banner-section

--- a/pages/index.html
+++ b/pages/index.html
@@ -9,8 +9,21 @@
   <body>
     <%- include('./layout/header'); -%>
 
-    <h1 class="index-title">我是首頁</h1>
-    <img src="../assets/images/cat.jpg" style="width: 300px;" alt="cat">
+    <div class="banner-section">
+      <div class="container">
+        <img class="banner-img mr-24" src="../assets/images/people.png" alt="william">
+        <div class="content">
+          <h2>Hi<br>I’m a front-end<br>developer</h2>
+          <div class="title-group">
+            <h1>William</h1>
+            <a class="contact-link" href="#contact-section">
+              <span class="slink-text">CONTACT ME</span>
+              <span class="material-icons-outlined">north_east</span>
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
 
     <%- include('./layout/footer'); -%>
 
