切版 introduction-section, about-section, contact-section

--- a/pages/index.html
+++ b/pages/index.html
@@ -25,6 +25,68 @@
       </div>
     </div>
 
+    <div class="introduction-section">
+      <div class="container">
+        <div class="content mr-24">
+          <h3 class="section-title text-white mb-36">Introduction</h3>
+          <p class="text-white fz-24 mb-32">Hi, I'm William Lee, a Front-End Developer with a passion for building beautiful and responsive websites that provide an optimal user experience.</p>
+          <div class="sparkle-group">
+            <img src="../assets/images/sparkle-sm.png" alt="sparkle">
+            <img src="../assets/images/sparkle-sm.png" alt="sparkle">
+            <img src="../assets/images/sparkle-sm.png" alt="sparkle">
+          </div>
+        </div>
+        <ul class="images-list">
+          <li><img src="../assets/images/sparkle.png" alt="sparkle"></li>
+          <li><img src="../assets/images/photographer.png" alt="photographer"></li>
+          <li><img src="../assets/images/people-2.png" alt="people"></li>
+        </ul>
+      </div>
+    </div>
+
+    <div class="about-section">
+      <div class="container">
+        <ul class="about-list">
+          <li class="about-item mr-24 mb-24">
+            <span class="about-list-num">01</span>
+            <h4 class="about-item-title">Attention to Detail</h4>
+            <p>Meticulous code analysis and optimization.</p>
+          </li>
+          <li class="about-item mb-24">
+            <span class="about-list-num">02</span>
+            <h4 class="about-item-title">Adaptability</h4>
+            <p>Swift learning of new technologies.</p>
+          </li>
+          <li class="about-item mr-24">
+            <span class="about-list-num">03</span>
+            <h4 class="about-item-title">Problem Solver</h4>
+            <p>Identifying and resolving issues.</p>
+          </li>
+          <li class="about-item">
+            <span class="about-list-num">04</span>
+            <h4 class="about-item-title">Team Player</h4>
+            <p>Collaborates and shares ideas.</p>
+          </li>
+        </ul>
+        <div class="content">
+          <h3 class="section-title mb-36">ABOUT ME</h3>
+          <p class="about-paragraph">With over 5 years of experience, I'm proficient in HTML, CSS, JavaScript, jQuery, and React. I have a strong understanding of user experience design and accessibility. I'm always learning new technologies and techniques to stay up-to-date in the field.</p>
+        </div>
+      </div>
+    </div>
+
+    <div class="contact-section">
+      <div class="container">
+        <h3 class="section-title text-white mr-16">CONTACT ME</h3>
+        <span class="material-icons-outlined text-white arrow-icon">arrow_right_alt</span>
+        <ul class="icons-list">
+          <li><a href="#"><img src="../assets/images/discord.png" alt="discord"></a></li>
+          <li><a href="#"><img src="../assets/images/instagram.png" alt="instagram"></a></li>
+          <li><a href="#"><img src="../assets/images/message.png" alt="message"></a></li>
+        </ul>
+      </div>
+    </div>
+
     <%- include('./layout/footer'); -%>
 
     <script type="module" src="../main.js"></script>
