--- a/pages/index.html
+++ b/pages/index.html
@@ -11,7 +11,7 @@
 
     <div class="banner-section bg-black">
       <div class="container">
-        <img class="banner-img mr-24" src="../assets/images/people.png" alt="william">
+        <img class="banner-img mr-24" src="/assets/images/people.png" alt="william">
         <div class="content">
           <h2>Hi<br>I’m a front-end<br>developer</h2>
           <div class="title-group">
@@ -31,15 +31,15 @@
           <h3 class="section-title text-white mb-36">Introduction</h3>
           <p class="text-white fz-24 mb-32">Hi, I'm William Lee, a Front-End Developer with a passion for building beautiful and responsive websites that provide an optimal user experience.</p>
           <div class="sparkle-group">
-            <img src="../assets/images/sparkle-sm.png" alt="sparkle">
-            <img src="../assets/images/sparkle-sm.png" alt="sparkle">
-            <img src="../assets/images/sparkle-sm.png" alt="sparkle">
+            <img src="/assets/images/sparkle-sm.png" alt="sparkle">
+            <img src="/assets/images/sparkle-sm.png" alt="sparkle">
+            <img src="/assets/images/sparkle-sm.png" alt="sparkle">
           </div>
         </div>
         <ul class="images-list">
-          <li><img src="../assets/images/sparkle.png" alt="sparkle"></li>
-          <li><img src="../assets/images/photographer.png" alt="photographer"></li>
-          <li><img src="../assets/images/people-2.png" alt="people"></li>
+          <li><img src="/assets/images/sparkle.png" alt="sparkle"></li>
+          <li><img src="/assets/images/photographer.png" alt="photographer"></li>
+          <li><img src="/assets/images/people-2.png" alt="people"></li>
         </ul>
       </div>
     </div>
@@ -80,9 +80,9 @@
         <h3 class="section-title text-white mr-16">CONTACT ME</h3>
         <span class="material-icons-outlined text-white arrow-icon">arrow_right_alt</span>
         <ul class="icons-list">
-          <li class="icons-item"><a href="#"><img src="../assets/images/discord.png" alt="discord"></a></li>
-          <li class="icons-item"><a href="#"><img src="../assets/images/instagram.png" alt="instagram"></a></li>
-          <li class="icons-item"><a href="#"><img src="../assets/images/message.png" alt="message"></a></li>
+          <li class="icons-item"><a href="#"><img src="/assets/images/discord.png" alt="discord"></a></li>
+          <li class="icons-item"><a href="#"><img src="/assets/images/instagram.png" alt="instagram"></a></li>
+          <li class="icons-item"><a href="#"><img src="/assets/images/message.png" alt="message"></a></li>
         </ul>
       </div>
     </div>
@@ -91,10 +91,10 @@
       <div class="container">
         <h3 class="section-title mb-16">My Projects</h3>
         <div class="projects-container">
-          <img class="projects-left-img mr-24" src="../assets/images/Rectangle 10.png" alt="computer">
+          <img class="projects-left-img mr-24" src="/assets/images/Rectangle 10.png" alt="computer">
           <div class="projects-right-side">
             <div class="projects-right-side-header mb-28">
-              <img class="mr-24" src="../assets/images/Rectangle 15.png" alt="code">
+              <img class="mr-24" src="/assets/images/Rectangle 15.png" alt="code">
               <div class="projects-right-side-header-content">
                 <p>I've worked on a variety of websites, including e-commerce sites, blogs, and landing pages. I take pride in creating clean, efficient, and user-friendly code.</p>
                 <a href="#" class="link bg-black text-white">
@@ -104,8 +104,8 @@
               </div>
             </div>
             <div class="projects-right-side-footer">
-              <img class="projects-ride-side-footer-img-1 mr-24" src="../assets/images/Rectangle 14.png" alt="phone">
-              <img class="projects-ride-side-footer-img-2" src="../assets/images/Rectangle 29.png" alt="phone">
+              <img class="projects-ride-side-footer-img-1 mr-24" src="/assets/images/Rectangle 14.png" alt="phone">
+              <img class="projects-ride-side-footer-img-2" src="/assets/images/Rectangle 29.png" alt="phone">
             </div>
           </div>
         </div>
@@ -114,6 +114,6 @@
 
     <%- include('./layout/footer'); -%>
 
-    <script type="module" src="../main.js"></script>
+    <script type="module" src="/main.js"></script>
   </body>
 </html>
